--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Time-series Analysis
-description: Forecasting and its uncertainty
+title: Logistic regression is linear regression.
+description: 
