--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
-title: Logistic regression is linear regression.
+title: Logistic regression is a linear model.
 description: 
