--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
 title: Logistic regression is a linear model.
-description: 
+description: Gradient descent optimizes linear models and non-linear models like neural networks.
